2018-10-10  Petasis George  <petasis@iit.demokritos.gr>
	* demos/dndSpy.tcl:
	* doc/tkDND.htm:
	* library/tkdnd_unix.tcl:
	* macosx/macdnd.m:
	* unix/TkDND_XDND.c:
	* win/Makefile:
	* win/OleDND.h: Merged pull request #20 "Fix some typos.", by Github
	user flopp.

2018-07-23  Petasis George  <petasis@iit.demokritos.gr>
	* README.md: Added a small experiment about Travis CI integration.

2018-07-22  Petasis George  <petasis@iit.demokritos.gr>
	* macosx/macdnd.m: Updated code to use the new (10.7+) API. Possible
	incompatibility: A file(s) drag will not start if any of the provided
	paths is not an absolute path.

2018-07-12  Petasis George  <petasis@iit.demokritos.gr>
	* macosx/macdnd.m: Temporarily disabled the new drag source code for
	macOS 10.7+, as it does not seem to work in simple tests.

2018-07-12  Petasis George  <petasis@iit.demokritos.gr>
	* macosx/macdnd.m: Merged pull request #4:
	* CMakeLists.txt:  Added compatibility for later OS X versions.
	* configure.ac:    https://github.com/petasis/tkdnd/pull/4
	Actually this pull request resolved the deprecation of
	"dragImage:at:offset:event:pasteboard:source:slideBack:" I failed to
	address in the previous update of macosx/macdnd.m.

	* win/Makefile: Merged pull request #5: Updated Windows version number.
	https://github.com/petasis/tkdnd/pull/5

	* demos/dndSpy.tcl: Merged pull request #10: Added executable flag to
	demo with shebang line.
	https://github.com/petasis/tkdnd/pull/10

	* Changelog: Merged pull request #15:
	https://github.com/petasis/tkdnd/pull/15

2018-07-11  Petasis George  <petasis@iit.demokritos.gr>
	* tcl-conf: Added more checks, needed for macOS.

	* macosx/macdnd.m: macOS 10.7/10.12/10.13 deprecated some definitions (
	NSDragPboard, NSLeftMouseDragged, NSLeftMouseDownMask) and some
	functions (convertScreenToBase) we use. Alternatives have been used.
	"dragImage:at:offset:event:pasteboard:source:slideBack:" is also
	deprecated in 10.7, but is more difficult to be replaced.
